crates/aura-guards/tests/boundaries/guard_operation_id_custom_raw_string.rs
use aura_guards::GuardOperationId;

fn main() {
    let _operation = GuardOperationId::Custom(String::new());
}
